--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "lifetrap-api",
   "version": "1.0.0",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   }
 }
