--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Node
 node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+
+# Vercel
+.vercel
+
+# Environment
 .env
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
+
+# OS
 .DS_Store
+Thumbs.db
